@@ -72,6 +72,8 @@ import (
 	_ "github.com/elastic/beats/metricbeat/module/kubernetes/system"
 	_ "github.com/elastic/beats/metricbeat/module/kubernetes/util"
 	_ "github.com/elastic/beats/metricbeat/module/kubernetes/volume"
+	_ "github.com/elastic/beats/metricbeat/module/logstash"
+	_ "github.com/elastic/beats/metricbeat/module/logstash/node"
 	_ "github.com/elastic/beats/metricbeat/module/memcached"
 	_ "github.com/elastic/beats/metricbeat/module/memcached/stats"
 	_ "github.com/elastic/beats/metricbeat/module/mongodb"
