@@ -1,0 +1,2 @@
+LOGSTASH_HOST=logstash
+LOGSTASH_PORT=9600
