@@ -1,0 +1,3 @@
+=== logstash node MetricSet
+
+This is the node metricset of the module logstash.
